--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -8,7 +9,7 @@ body {
 
 /*-----------------------------*\
          common style
-\*------------------------------*/
+\*-----------------------------*/
 .team-btn {
     font-size: 16px;
     background-color: #E02C6D;
@@ -23,6 +24,7 @@ body {
 }
 
 .team-btn:hover {
+    cursor: pointer;
     background-color: #ff005dcc;
     padding: 10px 50px;
     border-radius: 10px;
@@ -30,19 +32,23 @@ body {
 
 /*-----------------------------*\
          header style
-\*------------------------------*/
+\*-----------------------------*/
 .header-content {
     display: flex;
     justify-content: space-around;
     background-color: #2D25A0;
     padding-bottom: 53px;
     padding-top: 153px;
+    margin-bottom: 70px;
+
 }
 
 .header-title h2 {
+
     color: #fff;
     font-size: 64px;
     line-height: 80px;
+    font-weight: bold;
 }
 
 .header-banner img {
@@ -55,5 +61,54 @@ body {
 }
 
 .header-banner:hover {
+    cursor: pointer;
     transform: translateY(-10px);
+}
+
+/*-----------------------------*\
+         main style
+\*-----------------------------*/
+
+/*-----------------------------*\
+         players card's style
+\*-----------------------------*/
+.all-players {
+    width: 1050px;
+    margin: auto;
+}
+
+.players {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 27px;
+}
+
+.player {
+    width: 300px;
+    height: 456px;
+    padding: 15px;
+    margin: 0;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+
+.player-photo img {
+    width: 300px;
+    height: 256px;
+
+}
+
+.player-description h3 {
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: bold;
+    color: #18191F;
+    margin: 16px 0 10px 0;
+}
+
+.player-description p {
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: normal;
+    color: #6C6C6C;
+    margin: 10px 0;
 }
