--- a/Styles/style.css
+++ b/Styles/style.css
@@ -321,6 +321,8 @@ small {
         width: 100%;
     }
 
+
+
     .header-content {
         padding: 0 10px;
         flex-direction: column;
@@ -357,6 +359,7 @@ small {
 
     .highlight-description {
         width: 80%;
+        margin-bottom: 150px;
 
     }
 
@@ -452,11 +455,13 @@ small {
 
     .highlight {
         flex-direction: column;
-        padding: 0 10px;
     }
+
+
 
     .highlight-description {
         text-align: start;
+        padding-bottom: 100px;
     }
 
     /* bonus 1 */
